--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,11 +7,15 @@
     <x>0</x>
     <y>0</y>
     <width>601</width>
-    <height>444</height>
+    <height>474</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>DobotM1 demo</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="resources.qrc">
+    <normaloff>:/resources/resources/icon.png</normaloff>:/resources/resources/icon.png</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QPushButton" name="buttonSearch">
@@ -101,7 +105,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>HomeShngld</string>
+     <string>Home safe</string>
     </property>
    </widget>
    <widget class="QPushButton" name="buttonCheckAlarm">
@@ -241,7 +245,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PTP</string>
+     <string>PTP MOVJ</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="txtPtpR">
@@ -254,7 +258,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="buttonPickAndPlace">
+   <widget class="QPushButton" name="buttonClearQueue">
     <property name="geometry">
      <rect>
       <x>30</x>
@@ -264,7 +268,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>P&amp;P Demo</string>
+     <string>Clear tasks</string>
     </property>
    </widget>
    <widget class="QPushButton" name="buttonGoHomeSimple">
@@ -456,26 +460,72 @@
      </property>
     </item>
    </widget>
+   <widget class="QPushButton" name="buttonExecPtpL">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>380</y>
+      <width>80</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PTP MOVL</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>235</y>
+      <width>16</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>X</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>265</y>
+      <width>16</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Y</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>295</y>
+      <width>16</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Z</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>325</y>
+      <width>16</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>R</string>
+    </property>
+   </widget>
   </widget>
-  <widget class="QMenuBar" name="menuBar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>601</width>
-     <height>22</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-  </widget>
-  <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <tabstops>
@@ -494,8 +544,10 @@
   <tabstop>buttonGoHomeSimple</tabstop>
   <tabstop>buttonCheckAlarm</tabstop>
   <tabstop>buttonClearAlarms</tabstop>
-  <tabstop>buttonPickAndPlace</tabstop>
+  <tabstop>buttonClearQueue</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
